[gd_scene format=3 uid="uid://dxvtbudu80b4f"]

[ext_resource type="Script" uid="uid://cywb2avasjihk" path="res://scenes/arcade/player/player.gd" id="1_7ow0l"]
[ext_resource type="Texture2D" uid="uid://cxjjqp2urhlxv" path="res://assets/player.png" id="2_0owmy"]
[ext_resource type="Script" uid="uid://cyf6fhon2yb2e" path="res://scenes/arcade/player/shields.gd" id="3_7ow0l"]
[ext_resource type="PackedScene" uid="uid://dulyh4ydd2vqf" path="res://scenes/arcade/shield/shield.tscn" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://xute0hqlqdqy" path="res://scenes/arcade/cannon/cannon.tscn" id="4_dqkch"]
[ext_resource type="Script" uid="uid://cmo2t14e770kl" path="res://scenes/arcade/player/cannons.gd" id="5_7ow0l"]
[ext_resource type="AudioStream" uid="uid://cwtsm6n4d0r5d" path="res://assets/sounds/8-bit Sound Library/Explosion_03.wav" id="5_qlg0r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(64, 64)

[node name="Player" type="Area2D" unique_id=1689945115]
scale = Vector2(3, 3)
collision_mask = 16
script = ExtResource("1_7ow0l")

[node name="Player" type="Sprite2D" parent="." unique_id=1249087377]
self_modulate = Color(1.4586968, 1.4586968, 1.4586968, 1)
texture = ExtResource("2_0owmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1552792780]
position = Vector2(0.33333334, -0.33333397)
shape = SubResource("RectangleShape2D_qhqgy")

[node name="Shields" type="Node2D" parent="." unique_id=1734988738]
script = ExtResource("3_7ow0l")

[node name="TopShield" parent="Shields" unique_id=2144481525 instance=ExtResource("3_qhqgy")]
position = Vector2(0, -84)

[node name="RightShield" parent="Shields" unique_id=979293929 instance=ExtResource("3_qhqgy")]
position = Vector2(79.333336, 0.33333334)
rotation = 1.5707964

[node name="BottomShield" parent="Shields" unique_id=365177142 instance=ExtResource("3_qhqgy")]
position = Vector2(0.33333334, 82.333336)
rotation = 3.1415927

[node name="LeftShield" parent="Shields" unique_id=1421130794 instance=ExtResource("3_qhqgy")]
position = Vector2(-79, 2.383279e-14)
rotation = 4.712389

[node name="Cannons" type="Node2D" parent="." unique_id=1725042301]
unique_name_in_owner = true
script = ExtResource("5_7ow0l")

[node name="TopCannon" parent="Cannons" unique_id=1127117473 instance=ExtResource("4_dqkch")]
position = Vector2(0, -49.666664)

[node name="RightCannon" parent="Cannons" unique_id=573162622 instance=ExtResource("4_dqkch")]
position = Vector2(49.33334, 0)
rotation = 1.5707964
scale = Vector2(0.93, 0.93)

[node name="BottomCannon" parent="Cannons" unique_id=737632046 instance=ExtResource("4_dqkch")]
position = Vector2(3.061255e-13, 50)
rotation = 3.1415927

[node name="LeftCannon" parent="Cannons" unique_id=1200227506 instance=ExtResource("4_dqkch")]
position = Vector2(-47.666668, 2.9802322e-08)
rotation = 4.712389
scale = Vector2(0.93, 0.93)

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="." unique_id=1238842363]
stream = ExtResource("5_qlg0r")
bus = &"SoundFx"

[node name="Camera2D" type="Camera2D" parent="." unique_id=653930879]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="cannon_hit" from="Cannons/TopCannon" to="." method="_on_cannon_hit"]
[connection signal="cannon_hit" from="Cannons/RightCannon" to="." method="_on_cannon_hit"]
[connection signal="cannon_hit" from="Cannons/BottomCannon" to="." method="_on_cannon_hit"]
[connection signal="cannon_hit" from="Cannons/LeftCannon" to="." method="_on_cannon_hit"]
